--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
         padding: 0;
         box-sizing: border-box;
         font-family: "Urbanist", sans-serif;
+        background-color: #e3e6e6;
       }
     </style>
 
