completed the homepage

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
         box-sizing: border-box;
         font-family: "Urbanist", sans-serif;
         background-color: #e3e6e6;
+        color: #0b0742;
       }
     </style>
 
